[gd_scene load_steps=16 format=3 uid="uid://deffwa6bcthch"]

[ext_resource type="Script" path="res://Script/AnxietyShadowArcade.gd" id="1_y0bm4"]
[ext_resource type="Texture2D" uid="uid://70kmouvfm5h" path="res://Assets/anxiety/anxiety_move_frame_1.png" id="2_0ghi4"]
[ext_resource type="Texture2D" uid="uid://bfxcjjor6sc82" path="res://Assets/anxiety/anxiety_move_frame_2.png" id="3_ey0h5"]
[ext_resource type="Texture2D" uid="uid://bu41omkcyrehf" path="res://Assets/anxiety/anxiety_move_frame_3.png" id="4_0nsvc"]
[ext_resource type="Texture2D" uid="uid://crchj8dn4xkg6" path="res://Assets/anxiety/anxiety_scream_frame_1.png" id="5_8dmtg"]
[ext_resource type="Texture2D" uid="uid://cdjf7osrooqva" path="res://Assets/anxiety/anxiety_scream_effect.png" id="6_11bvg"]
[ext_resource type="AudioStream" uid="uid://dyanyacdbbsf5" path="res://Assets/Musik/Sounds/player_2_jump.ogg" id="7_fq3l8"]
[ext_resource type="AudioStream" uid="uid://u1gesyfrjh3k" path="res://Assets/Musik/Sounds/scream.wav" id="8_jrobd"]
[ext_resource type="AudioStream" uid="uid://bbpbgxsu05xxg" path="res://Assets/Musik/Sounds/slide.wav" id="9_eng6j"]
[ext_resource type="Texture2D" uid="uid://c0jnktmmfroae" path="res://Assets/stun_stars.png" id="10_a3w7y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ygwlx"]
atlas = ExtResource("2_0ghi4")
region = Rect2(0, 0, 500, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_pdy03"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygwlx")
}, {
"duration": 1.0,
"texture": ExtResource("3_ey0h5")
}, {
"duration": 1.0,
"texture": ExtResource("4_0nsvc")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_8dmtg")
}],
"loop": false,
"name": &"scream",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"spawn",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sc8bb"]
radius = 17.7647
height = 47.0588

[sub_resource type="CircleShape2D" id="CircleShape2D_8qwec"]
radius = 131.137

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dcgf1"]
radius = 12.6471
height = 36.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["shadow"]]
scale = Vector2(1.7, 1.7)
script = ExtResource("1_y0bm4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -21)
scale = Vector2(0.138, 0.138)
sprite_frames = SubResource("SpriteFrames_pdy03")
animation = &"spawn"
autoplay = "default"

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sc8bb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -11)

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpHeightTimer" type="Timer" parent="."]
wait_time = 0.07

[node name="BufferingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_8qwec")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
visible = false
position = Vector2(10.6667, -8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_11bvg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dcgf1")

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fq3l8")
volume_db = 5.115

[node name="Ability" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_jrobd")
volume_db = -6.865

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_eng6j")

[node name="Stun" type="Node2D" parent="."]
visible = false
scale = Vector2(0.466667, 0.44)

[node name="StunStars" type="Sprite2D" parent="Stun"]
position = Vector2(-5.66071, -78.1607)
scale = Vector2(1.16987, 0.42908)
texture = ExtResource("10_a3w7y")

[node name="StunStars2" type="Sprite2D" parent="Stun"]
position = Vector2(-7.14286, -57.1429)
rotation = -3.12715
scale = Vector2(1.16987, 0.42908)
texture = ExtResource("10_a3w7y")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -16.4706)
target_position = Vector2(-22.9412, -0.588223)
collision_mask = 4

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]
[connection signal="timeout" from="BufferingTimer" to="." method="_on_buffering_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
